entrego el login ya terminado

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,3 +1,4 @@
+@media screen and (max-width: 360px) {
 .main-login {
     background-image: url("/design/imgHome/Publicidad-para-pizzas2.jpg");
     background-size: cover;
@@ -24,6 +25,7 @@
     margin: 18px auto;
     border-radius: 18px;
     background-color: var(--verde);
+    box-shadow: 1px 1px 1px 1px;
 }
     .main-login form label{}
 
@@ -34,18 +36,28 @@
 
 .main-login .conteiner-red{list-style: none;padding: 0px;display: inline-flex;flex-direction: column;}
 .main-login .conteiner-red li{
-  border: 0.5px black solid;
-  display: inline-flex;
-  border-radius: 18px;
-  padding: 2px;
-  margin-bottom: 9px;
+  
+border: 0.5px black solid;
+  
+display: inline-flex;
+  
+border-radius: 18px;
+  
+padding: 2px;
+  
+margin-bottom: 9px;
+  
+box-shadow: 1px 1px 1px 1px;
 }    
 .main-login .conteiner-red li img{
- width: 37px;
- height: 38px;
+ 
+width: 37px;
+ 
+height: 38px;
 }
 .main-login .conteiner-red li a{
- padding-top: 8px;
+ 
+padding-top: 8px;
 }
 .conteiner-red .google-login{background-color: #695df8;}
 .conteiner-red .face-login{background-color: #1877f2;}
@@ -54,5 +66,77 @@
 background-color: green;
 }
 .conteiner-red .whats-login{
-    background-color: var(--gri));
+    background-color: var(--gri);
+}}
+
+
+    /*TABLET*/
+@media screen and (min-width: 361px){.main-login {
+    background-image: url("/design/imgHome/Publicidad-para-pizzas2.jpg");
+    background-size: 50% 100%;
+    background-repeat: no-repeat;
 }
+.main-login form{
+    justify-content: center;
+    align-items: center;
+    /* border: solid; */
+    display: flex;
+    flex-direction: column;
+    /* background-color: var(--gri); */
+    border-radius: 18px;
+    margin-left: 50%;
+    }
+    .main-login form input{
+    border: solid;
+    border-radius: 18px;
+    padding: 6px 2px;
+    margin-top: 13px;
+    border: solid .3px;
+}
+.main-login form button {
+    margin: 18px auto;
+    border-radius: 18px;
+    background-color: var(--verde);
+    box-shadow: 1px 1px 1px 1px;
+}
+    .main-login form label{}
+
+
+.main-login .conteiner-red {
+    
+}    
+
+.main-login .conteiner-red{list-style: none;padding: 0px;display: inline-flex;flex-direction: column;}
+.main-login .conteiner-red li{
+  
+border: 0.5px black solid;
+  
+display: inline-flex;
+  
+border-radius: 18px;
+  
+padding: 2px;
+  
+margin-bottom: 9px;
+  
+box-shadow: 1px 1px 1px 1px;
+}    
+.main-login .conteiner-red li img{
+ 
+width: 37px;
+ 
+height: 38px;
+}
+.main-login .conteiner-red li a{
+ 
+padding-top: 8px;
+}
+.conteiner-red .google-login{background-color: #695df8;}
+.conteiner-red .face-login{background-color: #1877f2;}
+.conteiner-red .insta-login{
+    
+background-color: green;
+}
+.conteiner-red .whats-login{
+    background-color: var(--gri);
+}}
