--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,6 +1,8 @@
 :root {
     --frijole: 'Frijole', sans-serif;
-    --antiqua:  
+    --antiqua:  'Inknut Antiqua'; 
+    --ingrid: 'Ingrid Darling';
+    
 
     --rojo: #A60D0D;    
     --gris: #D9D9D9;
@@ -13,6 +15,8 @@
     --blanco:#FFFFFF;
     --rojo: #A60D0D;
     --color-producto:#DFCEB6;
+  
+
     
     
 
@@ -40,10 +44,12 @@
     font-family: var(--Frijole);
     margin: 0px;
     color: var(--negro);
-    font-size: 17px;
+    font-size: 12px;
     /* display: flex; */
     text-decoration: none;
 }
 body{
     margin: auto;
+    width: 100%;
+    background: var(--color-producto);
 }
