--- a/views/register.html
+++ b/views/register.html
@@ -75,6 +75,9 @@
                 <button type="submit">Crear Cuenta</button>
                 
             </div>
+            <div class="c-register">
+                <h3>¿ya tienes una cuenta?/</h3><a href="/login">Ingresa</a>
+            </div>
         </form>
 
            
