--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -26,37 +26,47 @@
     }
 
     .main-product .article .articulo-producto .subtotal {
-    font-size: 31px;
-    font-family: var(--antiqua);
-}
+        font-size: 31px;
+        font-family: var(--antiqua);
+    }
 
 
     .main-product .article .articulo-producto .total {
-    color: var(--azul);
-    font-size: 33px;
-    font-family: var(
-    --antiqua);
-}
+        color: var(--azul);
+        font-size: 33px;
+        font-family: var(--antiqua);
+    }
 
 
     .confirmacion {}
 
     .confirmacion .botonok {
-font-family: var(--antiqua);
-margin: 0 0px 5px 85px;
-border-radius: 35px;
-padding: 7px 6px;
-border: none;
-background-color: var(--verde);
-font-weight: 336px;
-width: 202px;
-}
 
-.confirmacion .botonok p{font-size: 18px;margin: 0 0px 0px -21px;}
+        font-family: var(--antiqua);
+
+        margin: 0 0px 5px 85px;
+
+        border-radius: 35px;
+
+        padding: 7px 6px;
+
+        border: none;
+
+        background-color: var(--verde);
+
+        font-weight: 336px;
+
+        width: 202px;
+    }
+
+    .confirmacion .botonok p {
+        font-size: 18px;
+        margin: 0 0px 0px -21px;
+    }
 
     .confirmacion .botonok p i {
-    padding: 13px;
-}
+        padding: 13px;
+    }
 
 }
 
@@ -68,26 +78,70 @@
 
     .main-product .article .articulo-producto {}
 
-    .main-product .article .articulo-producto img {}
+    .main-product .article .articulo-producto img {
+        width: 70%;
+        border-radius: 103px;
+        margin: 26px 0px 5px 117px;
+    }
+
+    .main-product .article .articulo-producto h3 {
+        font-family: var(--ingrid);
+        font-size: 32px;
+        text-align: center;
+    }
 
     .main-product .article .articulo-producto h3 {}
 
-    .main-product .article .articulo-producto p {}
+    .main-product .article .articulo-producto .ingredientes {
+        text-align: center;
+        font-family: var(--antiqua);
+        font-size: 10px;
+    }
 
+    .main-product .article .articulo-producto hr {
+    display: none;
 }
 
-@media screen and (min-width: 769px) {
+    .main-product .article .articulo-producto .subtotal {
+        display: none;
+    }
 
-    .main-product {}
-
-    .main-product .article {}
-
-    .main-product .article .articulo-producto {}
-
-    .main-product .article .articulo-producto img {}
-
-    .main-product .article .articulo-producto h3 {}
-
-    .main-product .article .articulo-producto p {}
-
+    .main-product .article .articulo-producto .total {
+    font-family: var(--antiqua);
+    font-size: 40px;
+    text-align: center;
+    color: var(--azul);
 }
+
+    .confirmacion {}
+
+    .confirmacion .botonok {
+    font-family: var(--antiqua);
+    border-radius: 35px;
+    padding: 7px 6px;
+    border: none;
+    background-color: var(--verde);
+    font-weight: 336px;
+    width: 202px;
+}
+
+    .confirmacion .botonok p {}
+
+    .confirmacion .botonok p i {}
+
+
+    @media screen and (min-width: 769px) {
+
+        .main-product {}
+
+        .main-product .article {}
+
+        .main-product .article .articulo-producto {}
+
+        .main-product .article .articulo-producto img {}
+
+        .main-product .article .articulo-producto h3 {}
+
+        .main-product .article .articulo-producto p {}
+
+    }
