--- a/views/login.html
+++ b/views/login.html
@@ -40,6 +40,7 @@
             <input type="email" id="login" placeholder="Email">
             <input type="password" placeholder="contraseña">
             <button type="submit">Ingresar</button>
+            <a href="">¿Olvidaste tu contraseña?</a>
 
             <ol class="conteiner-red">
     
