--- a/views/ProductDetail.html
+++ b/views/ProductDetail.html
@@ -39,7 +39,7 @@
 
 
     <main class="main-product">
-
+<div class="caja">
         <div class="article">
 
             <article class="articulo-producto">
@@ -60,12 +60,16 @@
 
         <div class="confirmacion">
 
+            <button class="botonno" type="button">
+                <p>Cancelar<i class="fa-solid fa-xmark"></i></p>
+            </button>
+
             <button class="botonok" type="button">
                 <p>Agregar<i class="fa-solid fa-check"></i></p>
             </button>
 
         </div>
-
+</div>
     </main>
 
 
