--- a/views/productCart.html
+++ b/views/productCart.html
@@ -35,7 +35,15 @@
     </header>
 
     <main>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        
+
+
+
+        <h1> Cargue info </h1>
+
+
+
+        
     </main>
 
 
