--- a/views/home.html
+++ b/views/home.html
@@ -35,7 +35,11 @@
     </header>
 
     <main>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+        <img src="" alt="">
+    
+<h1>agregar codigo</h1>
+
     </main>
 
 
