--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,7 +1,5 @@
 :root {
     --frijole: 'Frijole', sans-serif;
-    --antiqua:  
-
     --rojo: #A60D0D;    
     --gris: #D9D9D9;
     --gri: #364F5E;
@@ -20,7 +18,7 @@
 
 
     
-};
+}
 /* Colores carrito y login*/
 :root{
     --crudo: #B2A394;
@@ -35,7 +33,16 @@
     --background-reg: #DFCEB6;
 
 }
+/* Tipografía carrito */
+:root{
+    --damion: 'Damion', cursive;
+    --inria: 'Inria Serif', serif;
+    --fahkwang: 'Fahkwang', sans-serif;
+    --corporant: 'Cormorant Garamond', serif;
+    --comic: 'Comic Neue', cursive;
 
+    
+}
 *{
     font-family: var(--Frijole);
     margin: 0px;
@@ -43,7 +50,12 @@
     font-size: 17px;
     /* display: flex; */
     text-decoration: none;
+    /* padding: 10px; */
+    /* padding-bottom: 10px; */
+    /* width: 103px; */
+    /* display: none; */
 }
+
 
 body{
     margin: auto;
