--- a/views/productCart.html
+++ b/views/productCart.html
@@ -11,12 +11,13 @@
 <body>
 
    
-    <header class="headerPrincipal">
+    <header class="header-cart">
 
+        
         <a href="/"> <img src="./design/logo.png" alt="logo pizza"></a>
         <h5>LA PIZZA QUE TE GUSTA</h5>
         <div class="burger-menu">
-            <i class="fas fa-bars"></i>
+            <a href=""><i class="fas fa-bars"></i></a>
         </div>
 
         <nav class="opcionPrincipal">
@@ -38,40 +39,102 @@
         <ul class="list-bar">
             <li><a href="">Clásicas</a></li>
             <li><a href="">Pizzas del mes</a></li>
-            <li><a href="">Promo del mes</a></li>
-            <li><a href="">Combos</a></li>
-            <li><a href="">Individuales</a></li>
-            <li><a href="">Bebidas</a></li>
+            <li class="list-none"><a href="">Promo del mes</a></li>
+            <li class="list-none"><a href="">Combos</a></li>
+            <li class="list-none"><a href="">Individuales</a></li>
+            <li class="drinks" class="list-none"><a href="">Bebidas</a></li>
+
+           
         </ul>
   </nav>
   <!-- TÍTULOS -->
   <h2>Clásicas</h2>
   <p class="caption">Clásicas</p>
+  <a class="arrow-right" href=""><i class="fa-solid fa-angle-right"></i></a>
 <!-- PRIMER DIV -->
-  <div class="first-div">
-    <img src="/design/imgCarrito/image2.jpg" alt="">
-<p class="name-pizza">Pepperoni 8P</p>
+<div class="contenedor-divs">
+    <div class="first-div">
+    <div class="contenedor-img">
+        <img src="/design/imgCarrito/image2.jpg" alt="">
+    </div>
+    <div class="contenedor-descrip">
+        <p class="name-pizza">Pepperoni 8P</p>
 <p class="description">Salsa de tomate, pepperoni, mozzarella, aceituna sin carozo.</p>
 <p class="price">$5,400,0</p>
+</div>
   </div>
+
   <!-- SEGUNDO-DIV -->
   <div class="second-div">
-    <img src="/design/imgCarrito/image3.jpg" alt="">
-    <p class="name-pizza">Margarita 6P</p>
+    <div class="contenedor-img">
+        <img src="/design/imgCarrito/image3.jpg" alt="">
+    </div>
+    <div class="contenedor-descrip">
+        <p class="name-pizza">Margarita 6P</p>
     <p class="description">Salsa de tomates maduros, mozzarella, hojas frescas de albahaca.</p>
     <p class="price">$4,900,0</p>
+</div>
+   
   </div>
+
   <!-- TERCER-DIV -->
   <div class="third-div">
-    <img src="/design/imgCarrito/image4.jpg" alt="">
-    <p class="name-pizza">Serranita 6P</p>
+    <div class="contenedor-img">
+        <img src="/design/imgCarrito/image4.jpg" alt="">
+    </div>
+    <div class="contenedor-descrip">
+        <p class="name-pizza">Serranita 6P</p>
     <p class="description">Salsa de tomate y pimiento asado, rúcula, mozzarella, jamón serrano.</p>
     <p class="price">$5,899,0</p>
     
+<!-- CUARTO-DIV -->
+
+    <div class="head">
+    <a href="/"> <img src="./design/logo.png" alt="logo pizza"></a>
+</div>
+<div class="fourth-div">
+    <p class="horary">De 11:30 a 00:30 hs</p>
+    <p class="open">Abierto</p>
+    <p class="text"> Ingredientes frescos de cosecha, Tenemos variedad, excelentes
+        chefs, te ofrecemos lo primero en cuanto a calidad. Pedila y
+        llevala, o te la llevamos a tu casa por medio de nuestro
+        servicio de delivery. </p>
+    <i class="fa-solid fa-bag-shopping"></i>
+    <a class="adress" href="https://www.google.com.ar/maps/preview">A retirar en Av. Cabildo 230</a>
+    <i class="fa-solid fa-arrow-pointer"></i>
+</div>
+<div class="foot">
+    <i class="fa-solid fa-basket-shopping"></i>
+    <a href="">Mi cesta(0)</a>
+</div>
+</div>
+<!-- QUINTO-DIV -->
+<div class="fifth-div">
+    <div class="contenedor-img-fifth">
+        <img src="/design/imgCarrito/image5.jpg" alt="">
+    </div>
+    <div class="contenedor-descrip-fifth">
+        <p class="name-pizza-fifth">Serranita 6P</p>
+    <p class="description-fifth">Salsa de tomate y pimiento asado, rúcula, mozzarella, jamón serrano.</p>
+    <p class="price-fifth">$5,899,0</p>
+    <!-- SEXTO-DIV -->
+  <div class="sixth-div">
+    <div class="contenedor-img-sixth">
+        <img src="/design/imgCarrito/image6.jpg" alt="">
+    </div>
+    <div class="contenedor-descrip-sixth">
+        <p class="name-pizza-sixth">Serranita 6P</p>
+    <p class="description-sixth">Salsa de tomate y pimiento asado, rúcula, mozzarella, jamón serrano.</p>
+    <p class="price-sixth">$5,899,0</p>
+
+   
   </div>
+
+
+</div>
   <!-- ÍCONOS-DIV -->
   <div class="icons-div">
-    <i class="fa-solid fa-arrow-left"></i>
+    <a href="/"><i class="fa-solid fa-right-from-bracket"></i></a>
     <p class="out">Salir</p>
     <i class="fa-solid fa-basket-shopping"></i>
     <p class="order">Mi pedido</p>
@@ -81,45 +144,10 @@
     </main>
 
 
-    <footer class="footer">
+    <footer>
 
-        <nav class="info-footer">
-
-            <ul>
-
-                <div class="conteiner-phone">
-                    <i class="fa-solid fa-phone"></i>
-                    <a href="tel">+54 9 388 4636451</a>
-                </div>
-
-                <h2 class="direction-f">Direccion</h2>
-
-                <div class="conteiner-location">
-                    <i class="fa-solid fa-location-dot"></i>
-                    <h3>AV. Cabildo 230 (c.a.b.a)</h3>
-                </div>
-
-                <h2 class="Redes">Nuestras Redes</h2>
-
-                <div class="conteiner-iconos">
-                    <a href="http://www.facebook.com.ar"><img src="/design/icons/face.png" alt="Facebook"></a>
-                    <a href="http://www.instagram.com.ar"><img src="/design/icons/insta.png" alt="Instagram"></a>
-                    <a href="http://www.pinteres.com.ar"><img src="/design/icons/pint.png" alt="Pinteres"></a>
-                    <a href="http://www.youtube.com.ar"><img src="/design/icons/youtu.png" alt="Youtube"></a>
-                    <a href="http://www.whatsapp.com.ar"><img src="/design/icons/what.png" alt="whatsapp"></a>
-
-
-
-                </div>
-
-                <div class="contenedor-copy">
-                    <h2 class="sobre-nos">Sobre Nosotros</h2>
-                    <p>copyrigth 2023 |Todos los Derechos Reservados |Desarrollado por grupo 10</p>
-                </div>
-
-            </ul>
-
-        </nav>
+  <p class="conditions"><a href="">Términos y condiciones</a></p>
+  <p class="conditions"><a href="">Política de privacidad</a></p>
 
     </footer>
     
