--- a/views/ProductDetail.html
+++ b/views/ProductDetail.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
-<body>
+<body class="body-product">
 
 
     <header class="headerPrincipal">
@@ -39,7 +39,7 @@
 
 
     <main class="main-product">
-<div class="caja">
+
         <div class="article">
 
             <article class="articulo-producto">
@@ -54,22 +54,23 @@
                 <hr>
                 <p class="total">$7200</p>
 
+                <div class="confirmacion">
+
+                    <button class="botonno" type="button">
+                        <p>Cancelar<i class="fa-solid fa-xmark"></i></p>
+                    </button>
+
+                    <button class="botonok" type="button">
+                        <p>Agregar<i class="fa-solid fa-check"></i></p>
+                    </button>
+
+                </div>
             </article>
 
         </div>
 
-        <div class="confirmacion">
 
-            <button class="botonno" type="button">
-                <p>Cancelar<i class="fa-solid fa-xmark"></i></p>
-            </button>
 
-            <button class="botonok" type="button">
-                <p>Agregar<i class="fa-solid fa-check"></i></p>
-            </button>
-
-        </div>
-</div>
     </main>
 
 
