--- a/views/login.html
+++ b/views/login.html
@@ -35,16 +35,24 @@
 
             <!--LOGIN-->
     
-            <img src="/desing/Publicidad-para-pizzas.jpg" alt="">
-    
-    
+         <form action="">
+           
+            <input type="email" id="login" placeholder="Email">
+            <input type="password" placeholder="contraseña">
+            <button type="submit">Ingresar</button>
+            <a href="">¿Olvidaste tu contraseña?</a>
+
             <ol class="conteiner-red">
     
-                <li><img src="" alt=""><a href="http://www.facebook.com">facebook</a></li>
-                <li><img src="" alt=""><a href="http://www.google.com">Google</a></li>
-                <li> <img src="" alt=""><a href="http://www.instagram.com">Instagram</a></li>
+                <li class="google-login"><img src="/design/icons/iconGoogle.png.png" alt=""><a href="http://www.google.com">Continuar con Google</a></li>
+                <li class="face-login"><img src="/design/icons/face.png" alt=""><a href="http://www.facebook.com">Continuar Facebook</a></li>
+                <li class="insta-login"> <img src="/design/icons/insta.png" alt=""><a href="http://www.instagram.com">Continuar con Instagram</a></li>
+                <li class="whats-login"> <img src="/design/icons/what.png" alt=""><a href="http://www.instagram.com">Continuar con Whatsapp</a></li>
     
             </ol>
+        </form>
+    
+            
     
     
         </main>
