--- a/views/register.html
+++ b/views/register.html
@@ -72,11 +72,15 @@
                 </div>
             </div>
             <div class="container-butons">
-                <button type="submit">Enviar</button>
-                <button type="reset">Borrar</button>
+                <button type="submit">Crear Cuenta</button>
+                
+            </div>
+            <div class="c-register">
+                <h3>¿ya tienes una cuenta?/</h3><a href="/login">Ingresa</a>
             </div>
         </form>
 
+           
 
     </main>
 
@@ -121,7 +125,9 @@
 
         </nav>
 
+
     </footer>
+    
 </body>
 
 </html>
